User avatar is stretching on the iPad (even though it doesn't stretch at that viewport width on the Mac). Try to fix that

--- a/src/components/dashboardHeader/dashboardHeader.module.css
+++ b/src/components/dashboardHeader/dashboardHeader.module.css
@@ -46,6 +46,7 @@
 
 .avatar {
   display: inline-block;
+  height: 100%;
   border-radius: 50%;
   box-shadow: 0px 0px 12px #fff;
   margin-left: 24px;
